tests/positive/basic/case_helpers/input.ci
void main(string[] args) {
    print(toUpper("héllo") + "\n");
    print(toLower("HÉLLO") + "\n");
    print(capitalize("été") + "\n");
}
