tests/negative/runtime/remove_directory/input.ci
void main(string[] args) {
    remove(".");
}
